--- a/css/styles.css
+++ b/css/styles.css
@@ -250,10 +250,24 @@ input:focus {
 }
 .href{
 	display: block;
-    margin: 1% auto;
-    width: 200px;
+	margin: 1% auto;
+	width: 200px;
 	font-family: 'Gilroy';
 	color:white;
 	font-size: 17px;
     clear: unset;
+}
+.git{
+	position: fixed;
+	bottom: 10px;
+	display: block;
+	margin: 1% auto;
+	width: 100%;
+	text-align: center;
+	font-family: 'Gilroy';
+	font-size: 17px;
+	clear: unset;
+}
+.git-href {
+	color:white;
 }
